File based Url storage test; checkstyle fixes